# demo-langchain

./: .gitignore  README.md
Tema 1 - Foundation/: hello_world_avanzado.py  hello_world_gemini.py
Tema 1 - Foundation/Proyecto1/: streamlit_chatbot.py
Tema 2 - Core/: analisis_sentimientos_parte1.py
Tema 3 - Cummunity - RAG/: document_loaders.py  google_drive_loader.py  multi_query_retriever.py  retrievers_langchain.py  text_splitters_parte1.py  text_splitters_parte2.py  vector_stores.py
Tema 3 - Cummunity - RAG/asistente_legal_RAG/: config.py  rag_system.py
Tema 3 - Cummunity - RAG/chroma_db/: chroma.sqlite3
Tema 4 - LangGraph/helpdesk_system/: config.py  helpdesk.db  setup_rag.py
Tema 4 - LangGraph/helpdesk_system/chroma_db/: chroma.sqlite3
Tema 5 - Memoria/: fundamentos_memoria.py  memoria_persistente_langgraph.py  memoria_vectorial_langgraph.py
Tema 5 - Memoria/multiuser_chat_system/: memory_manager.py
Tema 6 - Agents/: agente_ia_langchain.py  agente_ia_langchain_parte2.py  agente_ia_langgraph.py  sistema_multiagente.py
Tema 6 - Agents/soc_multiagent/: agents.py  config.py  supervisor.py  tools.py
instagram-carousel-bot/: .env.example  README.md  pyproject.toml
instagram-carousel-bot/bot/: chain.py  config.py  main.py  scheduler.py  sessions.py  utils.py
instagram-carousel-bot/instagram_carousel_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
instagram-carousel-bot/mcp_servers/: banana_pro_server.py  instagram_server.py  whatsapp_server.py
instagram-carousel-bot/ui/: app.py
(+4 files in other folders)
